--- a/_includes/head/favicon.html
+++ b/_includes/head/favicon.html
@@ -9,7 +9,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
 {%- include snippets/prepend-baseurl.html path='/assets/site.webmanifest' -%}
-<link rel="manifest" href="/site.webmanifest">
+<link rel="manifest" href="{{ __return }}">
 
 {%- include snippets/prepend-baseurl.html path='/assets/safari-pinned-tab.svg' -%}
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
