--- a/_layouts/articlesmem.html
+++ b/_layouts/articlesmem.html
@@ -1,5 +1,5 @@
 ---
-layout: base
+layout: none
 ---
 
 {%- assign _page_articles_data_source = page.articles.data_source | default: layout.articles.data_source -%}
